# cyanredcolor

./: Cargo.toml  LICENSE  README.md
crates/book/: book.toml
crates/platform/: Cargo.toml
crates/platform/src/: instruction.rs  lib.rs  memory.rs
crates/platform/src/instruction/: instruction_memory.rs
crates/platform/src/memory/: data_memory.rs  data_unit.rs  instruction_memory.rs  instruction_unit.rs
