[package]
name = "cyanredcolor_laguage"
version = "0.1.0"
edition = "2021"
authors = ["Illusion <d161442079@163.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[workspace]
members = ["crates/platform"]
default-members = ["crates/platform"]